Fixed:<rdar://problem/19628992> Holes Report Mouse over is not aligned properly

--- a/components/dashboard-invoices/dashboard-invoices.less
+++ b/components/dashboard-invoices/dashboard-invoices.less
@@ -18,8 +18,8 @@ rn-dashboard-invoices {
     color: @dark-grey;
     z-index: -1;
     display:inline-block;
-    padding-left:68px;
     border: 0px solid grey;
+    float:left;
 
     tbody {
       height: 200px;
@@ -114,11 +114,11 @@ rn-dashboard-invoices {
     overflow: auto;
     margin: 0 auto;
     color: @dark-grey;
-    position: absolute;
     display: inline-table;
     z-index: 100;
-    width:70px;
+    width:3%;
     background-color: #f6f6f6;
+    float:left;
 
     tbody {
       height: 200px;
@@ -163,8 +163,6 @@ rn-dashboard-invoices {
     }
   }
 
-
-
   table.missing-invoices {
     color: @dark-grey;
 
@@ -188,7 +186,21 @@ rn-dashboard-invoices {
   }
 
   .popover {
+    width:400px;
     max-width: none;
+
+    th{
+      color:#fff;
+    }
+
+    td{
+      font-weight:normal;
+    }
+  }
+
+  .popover-title {
+    color:#3d3d3d;
+    font-weight:bold;
   }
 
   label{
@@ -214,7 +226,7 @@ rn-dashboard-invoices {
    width:96%;
    height:450px;
    margin: 0px auto;
-   position: relative;
+   z-index:inherit;
  }
 
 .imgBlock{
